<resources>
    <string name="app_name">Lume - Novos Negócios</string>
    <string name="nome_de_usuario">nome de usuário</string>
    <string name="usuario">Usuário</string>
    <string name="digite_seu_nome_completo">Dígite seu nome </string>
    <string name="email_imcub_com_br">email@imcub.com.br</string>
    <string name="senha">Senha</string>
    <string name="entrar">ENTRAR</string>
    <string name="esqueci_a_senha">Esqueceu a senha?</string>
    <string name="registre_se">CADASTRE-SE!</string>
    <string name="linkRec">Informe seu endereço de e-mail abaixo e enviaremos uma mensagem com as instruções para a alteração de sua senha.</string>
    <string name="publicar_nova_ideia">Criar Pubicação</string>
    <string name="whastapp">WhastApp</string>
    <string name="minhas_ideias">Minhas Ideias</string>
    <string name="email">E-mail</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="crie_uma_conta">Crie uma conta</string>
    <string name="todo">TODO</string>
    <string name="ainda_n_o_tem_uma_conta">Ainda não tem uma conta?</string>
    <string name="nome">Nome</string>
    <string name="seu_colegio_universidade">Seu Colégio/Universidade</string>
    <string name="escreva_aqui_sua_denuncia">Escreva aqui sua denúncia.....</string>
    <string name="entrar_com_google">Entrar com Google</string>
    <string name="lume">Lume</string>
    <string name="nome_contato">Nome Contato</string>
    <string name="digite_a_institui_o_que_voc_estuda">Dígite a instituição que você estuda</string>
    <string name="j_tem_uma_conta">Já tem uma conta?</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="escreva_um_breve_descri_o">Escreva um breve descrição…</string>
    <string name="imagem_da_publica_o">IMAGEM DA PUBLICAÇÃO</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="nome_do_usuario">Nome do Usuário</string>
    <string name="ultima_mensagem">Última mensagem</string>
    <string name="imagem_da_ideia">IMAGEM DA IDEIA</string>
    <string name="descri_o">Descrição</string>
    <string name="salvar_edi_o">Salvar Edição</string>
    <string name="editar">Editar</string>
    <string name="cancelar_edi_o">Cancelar Edição</string>
    <string name="edite_seu_perfil">Edite seu perfil</string>
    <string name="colegio_ou_universidade">Colégio ou Universidade</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="mais">mais</string>
    <string name="deletar_minha_conta">Deletar minha conta</string>
    <string name="continuar">Continuar</string>
    <string name="conversas">Conversas</string>
    <string name="deletar_ideia">Deletar Ideia</string>
    <string name="editar_ideia">Editar Ideia</string>
    <string name="capa">Capa</string>
    <string name="alterar_foto_de_perfil">Alterar Foto de Perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="recuperar_conta">Recuperar Conta</string>
    <string name="enviar_mensagem">Enviar mensagem</string>
    <string name="denunciar_ideia">Denunciar ideia</string>
    <string name="faculdade">Faculdade</string>
    <string name="titulo">Título</string>
    <string name="telefone">Telefone</string>
    <string name="adicionar_contato">Conversar</string>
    <string name="carregando">Carregando…</string>
    <string name="cancelar">Cancelar</string>
    <string name="confimar">Confimar</string>
    <string name="confirmar_denuncia">Confirmar Denúncia</string>
    <string name="sobre">Sobre</string>
    <string name="texttexttexttexttexttexttext_texttexttexttexttexttexttexttexttexttexttext">TextTextTextTextTextTextText TextTextTextTextTextTextTextTextTextTextText</string>
    <string name="enviar">Enviar</string>
    <string name="publicar">Publicar</string>
    <string name="seu_curso">Seu curso</string>
    <string name="curso">Curso</string>
    <string name="editar_publica_o">Editar Publicação</string>
    <string name="investimento">Investimento</string>


</resources>
